# dexom-python

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  Snakefile  mainerr.out  mainout.out  pyproject.toml  requirements.txt  run_main.sh  setup.py  small4M.json  small4M_weights.csv  small4S_weights.csv  testoutput.out  testscript.sh
dexom-python/: model_functions.py
dexom_python/: __init__.py  default_parameter_values.py  dexom_cluster_results.py  gpr_rules.py  imat.py  imat_functions.py  main.py  model_functions.py  pathway_enrichment.py  result_functions.py  toy_models.py
docs/: changelog.rst  conf.py  dexom_python.cluster_utils.rst  dexom_python.enum_functions.rst  dexom_python.rst  doc_requirements.txt  index.rst  modules.rst  readme.rst
example_data/: example_data.md  pval_0-01_geneweights.csv  pval_0-01_reactionweights.csv  pval_0-01_reactionweights_qual_geneweights.csv  recon2v2_corrected.json  recon2v2_reactions.csv  recon2v2_reactions_shuffled.csv  recon2v2_reactions_subsystems.csv  recon2v2_subsystems_list.txt
recon2v2/: diff_gene_expression_data.csv
src/: dexom_cluster_results.py  enumeration.py  example_models.py  iMAT.py  imat.py  main.py  mainerr.out  mainout.out  model_functions.py  models.py  pathway_enrichment.py  permutation_test.py  result_functions.py  run_main.sh  rxn_enum.py  rxn_enum_single.py  visualization.py
test_files/: maintest.py  testoutput.out  testscript.sh
tests/: r13m10_reactions_shuffled.csv  test_dexom_python.py
toy_models/: README.md  small4M_divenum_results.csv  small4M_divenum_solutions.csv  (+6 more)
(+63 files in other folders)
