[tool.poetry]
name = "dexom_python"
version = "0.4.1"
description = "DEXOM implementation in python using cobrapy"
authors = ["Maximilian Stingl <maximilian.h.a.stingl@gmail.com>"]
license = "GPL-3.0"
readme="README.md"
include=["LICENSE"]
repository = "https://github.com/MetExplore/dexom-python"
homepage = "https://github.com/MetExplore/dexom-python"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
cobra = "^0.25"
numpy = "1.20"
six = "^1.16"
scipy = "1.7"
symengine = "^0.9.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
